# sNetVeri

./: README-EN.md  README.md
compression/: requirements.txt
compression/batfish/: batfish.py  construction.py
compression/benchmarks/Acorn/: construction.py
compression/benchmarks/Acorn/BGPStream/input/: hijack_2021_06_18_no-transit.in  hijack_2021_06_18_reach-allsrc.in  hijack_2021_06_22_4_no-transit.in  hijack_2021_06_22_4_reach-allsrc.in  hijack_2021_06_22_no-transit.in  hijack_2021_06_22_reach-allsrc.in  hijack_2021_06_25_no-transit.in  hijack_2021_06_25_reach-allsrc.in
compression/benchmarks/Acorn/BGPStream/output/: hijack_2021_06_14_parse.txt  hijack_2021_06_17_parse.txt  hijack_2021_06_18_parse.txt  hijack_2021_06_19_parse.txt  hijack_2021_06_19_policy.json  hijack_2021_06_21_parse.txt  hijack_2021_06_22_2_parse.txt  hijack_2021_06_22_3_parse.txt  hijack_2021_06_22_4_network.json  hijack_2021_06_22_4_parse.txt  hijack_2021_06_22_network.json  (+2 more)
compression/benchmarks/Fattree/: construction.py
compression/benchmarks/Fattree/output/: fattree_policy.json
compression/bonsai/: compression.py
compression/sNetVeri/: compression.py  wo_compression.py
simulation/: pom.xml
simulation/src/main/resources/: application.yml  logback.xml
verification/: Cargo.toml
verification/src/: main.rs  topo_runner.rs
verification/src/util/: device_port.rs  forward_action.rs  mod.rs  network.rs  rule.rs
verification/src/verifier/: annoucement.rs  bdd_engine.rs  cibtuple.rs  context.rs  device.rs  lec.rs  mod.rs  node.rs  rule_bdd.rs  toponet.rs
(+132 files in other folders)
