[package]
name = "topoNet"
version = "0.1.0"
edition = "2021"

authors = [
  "pengpeng <pengpeng08151001@163.com>",
  "dingfeiyan <894003870@qq.com>",
  "youlizhao <lizhaoyou@xmu.edu.cn>",
]

[profile.release]
debug = true

[dependencies]
biodivine-lib-bdd = "0.5.17"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.13.0"
lazy_static = "1.4.0"
mimalloc = "0.1.42"
log = "0.4"
env_logger = "0.11.3"
